--- a/integrated_calendar/static/styles/tasks.css
+++ b/integrated_calendar/static/styles/tasks.css
@@ -166,6 +166,8 @@ padding: .8rem;
 display: block;
 text-align: left;
 margin: 1rem;
+justify-content: center;
+align-items: center;
 }
 button, .edit_task, .link {background-image: linear-gradient(to right, #2d016c,#170048)}
 button, .edit_task, .link{
@@ -250,7 +252,7 @@ flex-direction: row;
 top: 0;left: 0;
 }
 .source_image {
-width: 10%;
+width: 15%;
 margin: 1rem 0;
 padding: 2rem;
 }
