--- a/landing.css
+++ b/landing.css
@@ -74,13 +74,14 @@ position: fixed;
 top: 0; left: 0;
 padding: 2rem 9%;
 width: 100%;
-background: rgba(255, 255, 255, 0.2);
+background: rgba(9,16,91,.9);
 backdrop-filter: blur(5px);
 box-shadow: 0 .5rem 1rem rgba(0, 0, 0, .1);
 display:flex;
 align-items: center;
 justify-content: space-between;
 z-index: 1000;
+border-bottom: 1px solid #999;
 transition: 2s ease;
 }
 header .logo{
