--- a/integrated_calendar/views/add_task.html
+++ b/integrated_calendar/views/add_task.html
@@ -9,15 +9,11 @@
 </head>
 
 <body>
-    <div class="row">
-        <div id='close_modal'>&#10006;</div>
+    <div class="modal-head">
+        <div id="close_modal">&#10006;</div>
+        <h3>Create Task</h3>
     </div>
     <div class="row">
-        <div class="column">
-            <h3>Create Task</h3>
-            <task_preview></task_preview>
-        </div>
-
         <div class="column">
             <p id="clicked_date"></p>
             <!-- Post Reminders -->
