--- a/integrated_calendar/views/calendar_modal.html
+++ b/integrated_calendar/views/calendar_modal.html
@@ -11,9 +11,11 @@
 </head>
 
 <body>
-    <div id='close_modal'>&#10006;</div>
-    <button class="task-reminders-btn">Task and Reminders</button>
-    <button class="add-sched-btn">Add a Schedule</button>
+    <div class="modal-head">
+        <div id='close_modal'>&#10006;</div>
+        <button class="task-reminders-btn cal-modal-button">Task and Reminders</button>
+        <button class="add-sched-btn cal-modal-button">Add a Schedule</button>
+    </div>
     <content>
     </content>
     <individual_modal></individual_modal>
