--- a/integrated_calendar/views/edit_task.html
+++ b/integrated_calendar/views/edit_task.html
@@ -9,8 +9,10 @@
 </head>
 
 <body>
-    <div id="cancel_edit">&#10006;</div>
-    <h3>Edit Task</h3>
+    <div class="modal-head">
+        <div id="cancel_edit">&#10006;</div>
+        <h3>Edit Task</h3>
+    </div>
     <!-- Edit Reminders -->
     <div class="modal-container">
         <div class="modal-image">
