--- a/integrated_calendar/views/task_checklist.html
+++ b/integrated_calendar/views/task_checklist.html
@@ -77,6 +77,7 @@
         <div class="body-container" id="body-container">
             <h1 class="heading">Task Checklist</h1>
             <div class="task-container">
+                <label class="cview">Have an Activity in mind? </label>
                 <button id="add_task">Create Task</button>
                 <div id="tasks_section">
                 </div>
