--- a/integrated_calendar/static/styles/tasks.css
+++ b/integrated_calendar/static/styles/tasks.css
@@ -44,6 +44,9 @@ text-align: center;
 padding: 4rem 2rem;
 text-transform: uppercase;
 }
+.wrapper .sidebar h2 a{
+color: #fff !important;
+}
 .wrapper .sidebar ul li{
 padding: 2rem;
 border-bottom: 1px solid rgba(0,0,0,0.09);
@@ -78,7 +81,7 @@ font-weight: 500;
 #navigation{
 opacity: 0;
 }
-.heading, .modal_content h3{
+.heading{
 text-align: center;
 background: var(--gradient2);
 color:transparent;
@@ -91,7 +94,13 @@ text-shadow: 3px 3px 5px rgba(0, 0, 0, .4);
 pointer-events: none;
 }
 .modal_content h3{
+text-align: center;
+font-size:3.5rem;
+text-transform: uppercase;
+padding:1rem;
+pointer-events: none;
 margin-left: 3rem;
+color: #fff;
 }
 header{
 position: fixed;
@@ -139,6 +148,7 @@ color: var(--teal);
 padding-bottom: 5rem;
 margin-left: 15%;
 margin-top:5rem;
+width: 100%;
 }
 h1{
 text-align: center;
@@ -146,6 +156,7 @@ text-align: center;
 .task-container{
 text-align: center;
 justify-content: center;
+width:100%;
 }
 .task-container .btn{
 margin: 1rem;
@@ -161,6 +172,12 @@ font-size:2rem;
 margin: 2rem 40rem;
 border-radius: .5rem;
 padding: .8rem;
+}
+.cview{
+font-size:1.5rem;
+font-weight:600;
+color:#2d016c;
+text-transform: uppercase;
 }
 .contents {
 display: block;
@@ -269,27 +286,28 @@ background-color: rgba(128, 128, 128, 0.493);
 z-index: 1;
 position:fixed;
 }
+.modal-head, #add-head{
+background: #2d016c;
+padding: 1rem;
+box-shadow: 0 .5rem 1rem rgba(0, 0, 0, .5)
+}
 .modal-image img{
 width:25rem;
 margin-top: 10%;
 margin-left: 10%;
 }
 .modal_content{
-top: 50%;
-left: 0;
-padding: 3rem;
 margin:30vh auto;
 overflow: auto;
 background-color: white;
 width: fit-content;
 height: fit-content;
-border-radius: 10px;
 box-shadow: 0 .5rem 1rem rgba(0, 0, 0, .1);
 }
 #close_modal, #cancel_edit{
 cursor: pointer;
 float: right;
-color: red;
+color: #fff;
 font-size:2rem;
 font-weight: bold;
 margin-right: 20px;
@@ -303,8 +321,6 @@ display: flex;
 flex-direction: row;
 justify-content: center;
 text-align: center;
-border: 1px solid #666;
-border-radius: 10px;
 }
 .edit-reminders-div, .post-reminders-div{
 padding: 3rem;
@@ -324,6 +340,7 @@ text-transform: uppercase;
 margin-bottom: 3%;
 }
 #clicked_date{
+margin-top: 1.5%;
 text-align:center;
 font-size: 2rem;
 font-weight: 500;
