disabled uneditable fields reminderType and isRecurring

--- a/integrated_calendar/views/edit_schedule.html
+++ b/integrated_calendar/views/edit_schedule.html
@@ -24,7 +24,7 @@
 
             <div class="form-field">
                 <label>Type: </label>
-                <select id="edit-reminder-type-option" name="type">
+                <select id="edit-reminder-type-option" name="type" disabled>
                     <option selected value="RMDR">Reminders</option>
                     <option value="TASK">Task</option>
                 </select>
@@ -41,7 +41,7 @@
 
             <div class="form-field">
                 <label>Is Recurring: </label>
-                <input type="checkbox" name="is-recurring">
+                <input type="checkbox" name="is-recurring" disabled>
             </div>
 
             <div class="form-text-field">
